--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-mongoURL="mongodb+srv://mohammadkkhan78:kamrankhan@cluster0.kcrp4iq.mongodb.net/user?retryWrites=true&w=majority"
+mongoURL="mongodb+srv://mohammadkkhan78:kamrankhan@cluster0.4l3vsma.mongodb.net/users?retryWrites=true&w=majority"
 port=8080
 
